--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
     <title>NAVER</title>
   </head>
   <body>
-    <div class="wrap">
-      <div class="wrap-center">
-        <div class="header"></div>
-        <div class="search"></div>
-        <div class="nav"></div>
-        <div class="main"></div>
+    <div id="wrap">
+      <div id="wrap-center">
+        <div id="header">
+          <div id="hamburger"></div>
+        </div>
+        <div id="search"></div>
+        <div id="nav"></div>
+        <div id="main"></div>
       </div>
     </div>
   </body>
