--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="wrap">
       <div id="wrap-center">
         <div id="header">
-          <div id="hamburger"></div>
+          <div id="header-hamburger"></div>
         </div>
         <div id="search"></div>
         <div id="nav"></div>
