--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <title>NAVER</title>
   </head>
   <body>
-    <div id="wrap">
-      <div id="wrap-center">
-        <div id="header">
-          <div id="header-hamburger"></div>
+    <div class="wrap">
+      <div class="wrap-center">
+        <div class="header">
+          <div class="header-hamburger"></div>
         </div>
-        <div id="search"></div>
-        <div id="nav"></div>
-        <div id="main"></div>
+        <div class="search"></div>
+        <div class="nav"></div>
+        <div class="main"></div>
       </div>
     </div>
   </body>
