--- a/index.html
+++ b/index.html
@@ -7,15 +7,17 @@
     <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico" />
     <title>NAVER</title>
   </head>
+
   <body>
-    <div class="wrap">
-      <div class="wrap-center">
-        <div class="header">
-          <div class="header-hamburger"></div>
+    <!--class 가 아닌 id로 붙인 이유는 어떤 div인지 헷갈리기 때문임 -->
+    <div id="wrap">
+      <div id="wrap-center">
+        <div id="header">
+          <div id="header-hamburger"></div>
         </div>
-        <div class="search"></div>
-        <div class="nav"></div>
-        <div class="main"></div>
+        <div id="search"></div>
+        <div id="nav"></div>
+        <div id="main"></div>
       </div>
     </div>
   </body>
