--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
     <!--class 가 아닌 id로 붙인 이유는 어떤 div인지 헷갈리기 때문임 -->
     <div id="wrap">
       <div id="wrap-center">
-        <div id="header">
-          <div id="header-hamburger"></div>
-        </div>
+        <div id="header"></div>
         <div id="search"></div>
         <div id="nav"></div>
         <div id="main"></div>
